Assignment1/mycalc.output
Terminals unused in grammar

    TOK_MUL
    TOK_DIV
    TOK_ADD
    TOK_SUB


State 24 conflicts: 2 shift/reduce
State 25 conflicts: 2 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: TMAIN TOCB stmts TCCB

    2 stmts: stmt TSEMICOLON stmts
    3      | ε

    4 stmt: TINT TID
    5     | TFLOAT TID
    6     | TID TASSIGN expr
    7     | TPRINTVAR TID

    8 expr: TINTVAL
    9     | TFLOATVAL
   10     | TID
   11     | expr TADD expr
   12     | expr TMULT expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TMAIN (258) 1
    TINT (259) 4
    TFLOAT (260) 5
    TPRINTVAR (261) 7
    TOCB (262) 1
    TCCB (263) 1
    TFLOATVAL <float_val> (264) 9
    TINTVAL <int_val> (265) 8
    TID <variable_type> (266) 4 5 6 7 10
    TASSIGN (267) 6
    TSEMICOLON (268) 2
    TADD (269) 11
    TMULT (270) 12
    TOK_MUL (271)
    TOK_DIV (272)
    TOK_ADD (273)
    TOK_SUB (274)


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    prog (21)
        on left: 1
        on right: 0
    stmts (22)
        on left: 2 3
        on right: 1 2
    stmt (23)
        on left: 4 5 6 7
        on right: 2
    expr <expr_type> (24)
        on left: 8 9 10 11 12
        on right: 6 11 12


State 0

    0 $accept: • prog $end

    TMAIN  shift, and go to state 1

    prog  go to state 2


State 1

    1 prog: TMAIN • TOCB stmts TCCB

    TOCB  shift, and go to state 3


State 2

    0 $accept: prog • $end

    $end  shift, and go to state 4


State 3

    1 prog: TMAIN TOCB • stmts TCCB

    TINT       shift, and go to state 5
    TFLOAT     shift, and go to state 6
    TPRINTVAR  shift, and go to state 7
    TID        shift, and go to state 8

    $default  reduce using rule 3 (stmts)

    stmts  go to state 9
    stmt   go to state 10


State 4

    0 $accept: prog $end •

    $default  accept


State 5

    4 stmt: TINT • TID

    TID  shift, and go to state 11


State 6

    5 stmt: TFLOAT • TID

    TID  shift, and go to state 12


State 7

    7 stmt: TPRINTVAR • TID

    TID  shift, and go to state 13


State 8

    6 stmt: TID • TASSIGN expr

    TASSIGN  shift, and go to state 14


State 9

    1 prog: TMAIN TOCB stmts • TCCB

    TCCB  shift, and go to state 15


State 10

    2 stmts: stmt • TSEMICOLON stmts

    TSEMICOLON  shift, and go to state 16


State 11

    4 stmt: TINT TID •

    $default  reduce using rule 4 (stmt)


State 12

    5 stmt: TFLOAT TID •

    $default  reduce using rule 5 (stmt)


State 13

    7 stmt: TPRINTVAR TID •

    $default  reduce using rule 7 (stmt)


State 14

    6 stmt: TID TASSIGN • expr

    TFLOATVAL  shift, and go to state 17
    TINTVAL    shift, and go to state 18
    TID        shift, and go to state 19

    expr  go to state 20


State 15

    1 prog: TMAIN TOCB stmts TCCB •

    $default  reduce using rule 1 (prog)


State 16

    2 stmts: stmt TSEMICOLON • stmts

    TINT       shift, and go to state 5
    TFLOAT     shift, and go to state 6
    TPRINTVAR  shift, and go to state 7
    TID        shift, and go to state 8

    $default  reduce using rule 3 (stmts)

    stmts  go to state 21
    stmt   go to state 10


State 17

    9 expr: TFLOATVAL •

    $default  reduce using rule 9 (expr)


State 18

    8 expr: TINTVAL •

    $default  reduce using rule 8 (expr)


State 19

   10 expr: TID •

    $default  reduce using rule 10 (expr)


State 20

    6 stmt: TID TASSIGN expr •
   11 expr: expr • TADD expr
   12     | expr • TMULT expr

    TADD   shift, and go to state 22
    TMULT  shift, and go to state 23

    $default  reduce using rule 6 (stmt)


State 21

    2 stmts: stmt TSEMICOLON stmts •

    $default  reduce using rule 2 (stmts)


State 22

   11 expr: expr TADD • expr

    TFLOATVAL  shift, and go to state 17
    TINTVAL    shift, and go to state 18
    TID        shift, and go to state 19

    expr  go to state 24


State 23

   12 expr: expr TMULT • expr

    TFLOATVAL  shift, and go to state 17
    TINTVAL    shift, and go to state 18
    TID        shift, and go to state 19

    expr  go to state 25


State 24

   11 expr: expr • TADD expr
   11     | expr TADD expr •
   12     | expr • TMULT expr

    TADD   shift, and go to state 22
    TMULT  shift, and go to state 23

    TADD      [reduce using rule 11 (expr)]
    TMULT     [reduce using rule 11 (expr)]
    $default  reduce using rule 11 (expr)


State 25

   11 expr: expr • TADD expr
   12     | expr • TMULT expr
   12     | expr TMULT expr •

    TADD   shift, and go to state 22
    TMULT  shift, and go to state 23

    TADD      [reduce using rule 12 (expr)]
    TMULT     [reduce using rule 12 (expr)]
    $default  reduce using rule 12 (expr)
